name:                misc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/achiku/misc#readme
license:             BSD3
license-file:        LICENSE
author:              Akira Chiku
maintainer:          akira.chiku@gmail.com
copyright:           Akira Chiku
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable misc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , misc
                     , QuickCheck
                     , hspec
  default-language:    Haskell2010

test-suite misc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , misc
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/achiku/misc
